[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "kAOV" 
version = "1.9.8"
description = "Kernel Analysis of Variance"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["kernel methods", "analysis of variance"]
authors = [
  {name = "Polina Arsenteva", email = "polina.arsenteva@ens-lyon.fr" },
  {name = "Anthony Ozier-Lafontaine", email = "antho.ozier.laf@gmail.com" },
  {name = "Ghislain Durif", email = "ghislain.durif@ens-lyon.fr"}
]
maintainers = [
  {name = "Polina Arsenteva", email = "polina.arsenteva@ens-lyon.fr" }
]
dependencies = [
  "matplotlib",
  "pandas",
  "scipy",
  "patsy",
  # Default torch dependency for Linux and macOS ARM
  "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  # macOS x86: torch < 2.3 (hence Python < 3.13)
  "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  # Default numpy dependency for Linux and macOS ARM
  "numpy; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  # macOS x86: because of torch < 2.3
  "numpy<2.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "statsmodels >= 0.14.0",
  "tqdm",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme",
  "numpydoc",
  "myst-parser",
  "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/LMJL-Alea/kAOV"
Documentation = "https://tuxette.github.io/kAOV/"
Repository = "https://github.com/LMJL-Alea/kAOV"

[tool.uv.sources]
torch = [
  { index = "pytorch-macos", marker = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
  { index = "pypi", marker = "sys_platform != 'darwin'"},
]

[[tool.uv.index]]
name = "pytorch-macos"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
index-strategy = "unsafe-best-match"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"
explicit = true

[dependency-groups]
dev = [
    "spyder>=6.1.3",
]

